hide scrollbar to prevent jumping

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  margin: 0;
+  margin: auto;
   font-family: 'Roboto', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,8 +11,11 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-position: center;
-  max-width: 100%;
   overflow-x: hidden;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 code {
